samples/_failures_safe/1761422167_0af457_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_365af461.c: In function ‘main’:
./samples/SAFE/__tmp_365af461.c:179:5: error: expected expression at end of input
  179 |     for (size_t i =
      |     ^~~
./samples/SAFE/__tmp_365af461.c:179:5: error: expected declaration or statement at end of input
